--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pyaudio = "0.2.14"
 websockets = "12.0"
 janus = "1.0.0"
 flask = "3.0.0"
 flask-socketio = "5.3.6"
 python-dotenv = "1.0.0"
+sounddevice = "^0.5.1"
 
 
 [build-system]
